# Geant4

./: .gitignore  CZT探测器系统说明.md  rebuild_geant4_multithread.sh  test_ore.gdml  安装.sh
apps/: README.md  __init__.py  streamlit_app.py
apps/pages/: __init__.py  ore_model_viewer.py  overview.py  progress.py  results.py  run_config.py  sample_explorer.py
apps/readers/: __init__.py  gdml_reader.py  material_scan_reader.py  sample_reader.py  snr_reader.py  sorting_reader.py
apps/task_service/: __init__.py  models.py  queue.py  runner.py  service.py  worker.py
artifacts/job_artifacts/: J000003.json  J000005.json  J000006.json  J000008.json  J000009.json  J000010.json
artifacts/job_params/: J000001.json  J000002.json  J000003.json  J000004.json  J000005.json  J000006.json  J000007.json  J000008.json  J000009.json  J000010.json
artifacts/streamlit_runtime/: jobs.sqlite3
code/: CMakeLists.txt  CZT.cc  master.mac  scan_row.mac  几何尺寸说明.md  运行说明.md
code/build_tmp/: CMakeCache.txt  CZT  cmake_install.cmake  run.mac  scan_row.mac  step2_physics_process.py  vis.mac
code/build_tmp/npy_data/: blank_high.npy  ore_high.npy
code/build_tmp2/npy_data/: blank_high.npy  blank_low.npy  ore_high.npy  ore_low.npy
code/include/: ActionInitialization.hh  Analysis.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
code/process/: combine_and_visualize.py  compute_R_from_png.py  scan_step.sh  步进扫描使用说明.md  矿石分选步进扫描方案.md
code/src/: DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
dat/output0.7_-28~28/: combined_data_summary.txt
dat/output0.8_-20~20/: combined_data.npz  像素点判断说明.md
dat/output平板百万/: combined_data_summary.txt
data/raw/: step2_physics_process.py
experiments/efficientnet_rvalue_PbS_1M/: history.json  metrics.json
experiments/efficientnet_rvalue_PbS_1M_balanced_both/: history.json  metrics.json
experiments/efficientnet_rvalue_logcheck/: history.json  metrics.json
readme/: CZT探测器系统说明.md  GDML动态加载功能使用说明.md  X-Ray 智能分选仿真平台重构指南.md  查看GDML.md  灰度图.md
scripts/: README_material_scan.md  generate_complex_data.py  generate_ore.py  generate_spectrum.py  generate_spectrum_optimized.py  material_thickness_scan.py  run_pipeline.py  step2_physics_process.py
scripts/install/: rebuild_geant4_with_gdml.sh  (+1 more)
simulation/: CMakeLists.txt  CZT.cc  launch_sample.mac  master.mac  scan_row.mac  vis.mac
说明/: CZT探测器系统说明.md  GDML动态加载功能使用说明.md  X-Ray 智能分选仿真平台重构指南.md
(+1455 files in other folders)
